@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: graphics.c,v 1.522 2016/04/04 23:34:48 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: graphics.c,v 1.523 2016/04/17 17:41:04 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - graphics.c */
@@ -4393,18 +4393,20 @@ process_image(void *plot, t_procimg_action action)
     /* This might better be done when the data is entered rather than here.	*/
     if (L == 0 || K == 0) {
 	if (points[0].x == points[1].x) {
+	    /* y coord varies fastest */
 	    for (K = 0; points[K].x == points[0].x; K++)
 		    if (K >= p_count)
 			    break;
 	    L = p_count / K;
 	} else {
-	    for (L = 0; points[L].y == points[0].y; L++)
-		    if (L >= p_count)
+	    /* x coord varies fastest */
+	    for (K = 0; points[K].y == points[0].y; K++)
+		    if (K >= p_count)
 			    break;
-	    K = p_count / L;
+	    L = p_count / K;
 	}
-	FPRINTF((stderr, "No dimension information for %d pixels total. Try %d x %d\n",
-		p_count, L, K));
+	fprintf(stderr, "No dimension information for %d pixels total. Try %d x %d\n",
+		p_count, L, K);
     }
 
     grid_corner[0] = 0;
